# pg-db-operator

./: .env  .pre-commit-config.yaml  PROJECT  README.md  docker-compose.yaml  go.mod  go.sum  main.go  pyproject.toml
.devspace/: generated.yaml
api/v1beta1/: groupversion_info.go  postgresdatabase_types.go  zz_generated.deepcopy.go
config/crd/: kustomization.yaml
config/crd/bases/: db.bujarmurati.com_postgresdatabases.yaml
config/crd/patches/: cainjection_in_postgresdatabases.yaml  webhook_in_postgresdatabases.yaml
config/default/: kustomization.yaml
config/manager/: controller_manager_config.yaml
config/rbac/: postgresdatabase_editor_role.yaml  postgresdatabase_viewer_role.yaml  role.yaml
config/samples/: db_v1beta1_postgresdatabase.yaml
controllers/: postgresdatabase_controller.go  postgresdatabase_controller_test.go  suite_test.go
crd/: crd.yaml
database/: database_server.go  database_server_test.go  suite_test.go
manifests/: controller.yaml  crd.yaml
metacontroller/: install.sh
pg_db_operator/: app.py  controller.py  database.py  health_check.py  main.py  models.py  operator.py  reconciliation.py  sync.py
test_resources/: docker-compose.yml  init.sql
tests/: conftest.py  test_controller.py  test_database.py  test_health_check.py  test_operator.py  test_pg_db_operator.py  test_reconcilation.py
tests/data/: init.sql  pg-db.yaml
